Update README; modify columns CSS

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,6 +1,9 @@
 [data-wrap="columns"] {
   width: 50%;
   float: left;
+  border-right: 1px solid black;
+  padding-right: 5px;
+  margin-right: 5px;
 }
 
 [data-wrap="floatl"] {
