--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -6,6 +6,11 @@
   margin-right: 5px;
 }
 
+[data-wrap="columns"] > p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 [data-wrap="floatl"] {
   float: left;
   margin-right: 10px;
