--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,7 +1,7 @@
 [data-wrap="columns"] {
   width: 50%;
   float: left;
-  border-right: 1px solid black;
+  border-right: 1px solid $primary;
   padding-right: 5px;
   margin-right: 5px;
 }
